Subtabs alignment fixed

--- a/app/assets/themes/default/stylesheets/style.css.scss
+++ b/app/assets/themes/default/stylesheets/style.css.scss
@@ -804,7 +804,7 @@ table.settings, .settings th {
   border-collapse: collapse;
   height: 40px;
   line-height: 40px;
-  text-align: left;
+  text-align: center;
   font-weight: bold;
 }
 
@@ -855,6 +855,7 @@ table.settings {
 	tbody td {
 		height: 35px;
 		border-bottom: 1px solid #e8e8e8;
+    text-align: center;
 	}
 	.odd td {
 		background: #f8f8f8;
@@ -893,7 +894,7 @@ table.apptable {
   @include background-gradient(#fcfcfc, #f7f7f7);
 
   td {
-    text-align: left;
+    text-align: center;
     a {
       color: #000;
       font-size: 13px;
